<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ClientsRouteRV">

    <CheckBox
        android:id="@+id/checkboxButtonRoute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/RouteClientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10.5dp"
        android:layout_marginTop="6.5dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Name"
        android:textColor="#000000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/RouteClientLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/RouteClientName"
        android:fontFamily="@font/roboto_medium"
        android:textColor="#000000"
        android:layout_marginTop="6.5dp"
        android:text="@string/LastName"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/RouteClientStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RouteClientName"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:layout_toEndOf="@+id/RouteClientPostalCode"
        android:text="@string/Street"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/routeComa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/coma"
        android:fontFamily="@font/roboto"
        android:layout_below="@+id/RouteClientName"
        android:layout_toEndOf="@+id/RouteClientStreet"/>

    <TextView
        android:id="@+id/RouteClientPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RouteClientName"
        android:layout_marginStart="10.5dp"
        android:text="@string/PostalCode"
        android:fontFamily="@font/roboto"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/RouteClientCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/City"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/roboto"
        android:layout_below="@+id/RouteClientName"
        android:layout_toEndOf="@+id/routeComa"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/RouteClientStreet"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="6.5dp"
        android:elevation="2dp" />

</RelativeLayout>