<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/layout_rounded">

    <ImageView
        android:id="@+id/bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/rectangle"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/imageViewCV"
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:cardCornerRadius="4dp"
        android:elevation="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        android:layout_marginLeft="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_client_image" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/NameLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/imageViewCV"
        app:layout_constraintTop_toBottomOf="@+id/bar">

        <TextView
            android:id="@+id/bottomInfoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/Name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bottomInfoLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/LastName"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bottomInfoPostalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PostalCode"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/grey"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCV"
        app:layout_constraintTop_toBottomOf="@+id/bottomInfoStreet" />

    <TextView
        android:id="@+id/bottomInfoCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/City"
        android:textColor="@color/grey"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/bottomInfoPostalCode"
        app:layout_constraintTop_toBottomOf="@+id/bottomInfoStreet" />

    <TextView
        android:id="@+id/bottomInfoStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Street"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCV"
        app:layout_constraintTop_toBottomOf="@+id/NameLastName" />

    <TextView
        android:id="@+id/activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/roboto_medium"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:gravity="center"
        android:text="@string/Active"
        android:textColor="@color/secondary"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewCV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <LinearLayout
        android:id="@+id/navigationButton"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="18dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_directions_black_24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Route"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_medium"
            android:textSize="14sp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>